# kit4b

./: .gitattributes  .gitignore  ChangeLog  Makefile.am  NEWS  README.md  config.h  configure.ac  kit4b.sln
BEDFilter/: BEDFilter.cpp  BEDFilter.vcxproj  Makefile.am  stdafx.cpp  stdafx.h
BEDMerge/: BEDMerge.cpp  BedMerge.vcxproj  ChromFeatures.cpp  ChromFeatures.h  Makefile.am  stdafx.cpp  stdafx.h
DNAseqSitePotential/: DNAseqSitePotential.cpp  DNAseqSitePotential.vcxproj  Makefile.am  stdafx.cpp  stdafx.h
Docs/: ngskit4b.alignbs.txt  ngskit4b.assemb.txt  ngskit4b.benchmark.txt  ngskit4b.blitz.txt  ngskit4b.de2sqlite.txt  ngskit4b.fasta2bed.txt  ngskit4b.fasta2nxx.txt  ngskit4b.filtchrom.txt  ngskit4b.filter.txt  ngskit4b.genbioseq.txt  ngskit4b.gendeseq.txt  ngskit4b.gengoassoc.txt  ngskit4b.gengoterms.txt  ngskit4b.goassoc.txt  ngskit4b.hammings.txt  ngskit4b.index.txt  ngskit4b.kalign.txt  ngskit4b.kmarkers.txt  ngskit4b.locateroi.txt  ngskit4b.lochap2bed.txt  ngskit4b.maploci.txt  ngskit4b.markerseqs.txt  ngskit4b.mergeoverlaps.txt  ngskit4b.ngsqc.txt  ngskit4b.pescaffold.txt  ngskit4b.prekmarkers.txt  ngskit4b.pseudogenome.txt  ngskit4b.psl2sqlite.txt  ngskit4b.remaploci.txt  ngskit4b.rnade.txt  ngskit4b.scaffold.txt  ngskit4b.simreads.txt  ngskit4b.snpm2sqlite.txt  ngskit4b.snpmarkers.txt  ngskit4b.snps2pgsnps.txt  ngskit4b.snps2sqlite.txt  ngskit4b.sql.schema.txt  ngskit4b.ssr.txt  ngskit4b.ultras.txt  ngskit4b.xfasta.txt  (+6 more)
FastaToPE/: FastaToPE.cpp  FastaToPE.vcxproj  Makefile.am  stdafx.h
GFFfilter/: GFFfilter.cpp  GFFfilter.vcxproj  Makefile.am  stdafx.cpp
GTFfilter/: ChromMap.cpp  ChromMap.h  GTFfilter.cpp  GTFfilter.vcxproj  Makefile.am  stdafx.cpp  stdafx.h
HammingDist/: HammingDist.cpp  HammingDist.vcxproj  Makefile.am  stdafx.cpp
LocateROI/: LocateROI.cpp  LocateROI.vcxproj  Makefile.am  stdafx.cpp
Loci2Phylip/: Loci2Phylip.cpp  Loci2Phylip.vcxproj  Makefile.am  stdafx.cpp  stdafx.h
PEscaffold/: Makefile.am  PEscaffold.cpp  PEscaffold.vcxproj  SQLiteSummaries.cpp  SQLiteSummaries.h  stdafx.cpp
RNAseqSitePotential/: Makefile.am  RNAseqSitePotential.cpp  RNAseqSitePotential.vcxproj  stdafx.h
SimulateMNase/: Makefile.am  SimulateMNase.cpp  SimulateMNase.vcxproj  stdafx.cpp  stdafx.h
bed2csv/: Makefile.am  bed2csv.cpp  bed2csv.vcxproj  stdafx.h
blast2csv/: Makefile.am  blast2csv.cpp  blast2csv.vcxproj  stdafx.cpp  stdafx.h
csv2bed/: Makefile.am  csv2bed.cpp  csv2bed.vcxproj
csv2fasta/: IncExclChroms.cpp  IncExclChroms.h  Makefile.am  csv2fasta.cpp  csv2fasta.vcxproj  stdafx.cpp  stdafx.h
csv2feat/: Makefile.am  csv2feat.cpp  csv2feat.vcxproj  stdafx.h
csv2sqlite/: Makefile.am  SQLiteDE.cpp  SQLiteDE.h  SQLiteMarkers.cpp  SQLiteMarkers.h  csv2sqlite.cpp  csv2sqlite.vcxproj  stdafx.h
csv2stats/: Makefile.am  csv2stats.cpp  csv2stats.vcxproj  stdafx.cpp  stdafx.h
csvfilter/: CSVFilter.vcxproj  Makefile.am  csvfilter.cpp  stdafx.cpp  stdafx.h
csvmerge/: CSVMerge.vcxproj  ChromMaps.cpp  ChromMaps.h  Makefile.am  csvmerge.cpp  stdafx.cpp  stdafx.h
fasta2dist/: Makefile.am  fasta2dist.cpp  fasta2dist.vcxproj  stdafx.h
fasta2struct/: Makefile.am  fasta2struct.cpp  fasta2struct.vcxproj  stdafx.cpp  stdafx.h
fastafilter/: Makefile.am  fastafilter.cpp  fastafilter.vcxproj  stdafx.cpp  stdafx.h
filterreads/: Makefile.am  filterreads.cpp  filterreads.vcxproj  stdafx.cpp  stdafx.h
genElementProfiles/: Makefile.am  genElementProfiles.cpp  genElementProfiles.vcxproj  stdafx.cpp
genGenomeFromAGP/: AGPs.cpp  AGPs.h  Contigs.cpp  Contigs.h  Makefile.am  genGenomeFromAGP.cpp  genGenomeFromAGP.vcxproj  stdafx.cpp
genNormWiggle/: Makefile.am  genNormWiggle.cpp  genNormWiggle.vcxproj  stdafx.cpp
genWiggle/: Makefile.am  genWiggle.cpp  genWiggle.vcxproj  stdafx.cpp
genalignconf/: AlignRecip.cpp  AlignRecip.h  AlignSubSeqs.cpp  AlignSubSeqs.h  Makefile.am  genalignconf.cpp  genalignconf.vcxproj  stdafx.cpp  stdafx.h
genalignloci2core/: Makefile.am  genalignloci2core.cpp  genalignloci2core.vcxproj  stdafx.cpp  stdafx.h
genalignref2relloci/: FilterRefIDs.cpp  FilterRefIDs.h  Makefile.am  genalignref2relloci.cpp  genalignref2relloci.vcxproj  stdafx.cpp
genalignstats/: Makefile.am  genalignstats.cpp  genalignstats.vcxproj  stdafx.cpp  stdafx.h
genbiomultialign/: Makefile.am  genbiomultialign.cpp  genbiomultialign.vcxproj  stdafx.cpp
gencentroidmetrics/: Makefile.am  SNPsFile.cpp  SNPsFile.h  gencentroidmetrics.cpp  gencentroidmetrics.vcxproj
gencomposition/: Makefile.am  gencomposition.cpp  gencomposition.vcxproj  stdafx.cpp  stdafx.h
genelementseq/: Makefile.am  genelementseq.cpp  genelementseq.vcxproj  stdafx.cpp  stdafx.h
libBKPLPlot/: csa.h  (+75 more)
libkit4b/: AlignValidate.cpp  AlignValidate.h  BEDfile.cpp  BEDfile.h  BioSeqFile.cpp  BioSeqFile.h  CBlitz.cpp  CBlitz.h  CPBASfxArray.cpp  CPBASfxArray.h  CSQLitePSL.cpp  CSQLitePSL.h  CSVFile.cpp  CSVFile.h  CVS2BED.cpp  CVS2BED.h  Centroid.cpp  ConfSW.cpp  Conformation.cpp  Conformation.h  Contaminants.cpp  Contaminants.h  DSsort.cpp  DSsort.h  DataPoints.cpp  DataPoints.h  Diagnostics.cpp  Diagnostics.h  Endian.cpp  Endian.h  EndianX.h  ErrorCodes.cpp  ErrorCodes.h  FMIndex.cpp  FMIndex.h  Fasta.cpp  Fasta.h  FeatLoci.cpp  FeatLoci.h  FilterLoci.cpp  (+75 more)
libzlib/: Makefile.am  crc32.h  deflate.h  gzguts.h  gzlib.c  gzread.c  gzwrite.c  inffast.h  inffixed.h  inflate.h  inftrees.h  libzlib.vcxproj  stdafx.cpp  trees.c  trees.h  zconf.h  zlib.h  zutil.h
ngskit4b/: AlignsBootstrap.cpp  AlignsBootstrap.h  ArtefactReduce.cpp  ArtefactReduce.h  AssembGraph.cpp  AssembGraph.h  Assemble.cpp  Benchmarker.cpp  Benchmarker.h  Blitz.cpp  Blitz.h  CDGTvQTLs.cpp  CDGTvQTLs.h  CGenMAFAlgn.cpp  CGenMAFAlgn.h  CGenMLdatasets.cpp  CGenMLdatasets.h  CWIGutils.cpp  CWIGutils.h  CallHaplotypes.cpp  CallHaplotypes.h  FastaNxx.cpp  FastaNxx.h  FilterSAMAlignments.cpp  FilterSAMAlignments.h  GBSmapSNPs.cpp  GBSmapSNPs.h  KAligner.cpp  KAligner.h  KAlignerCL.cpp  LocHap2Bed.cpp  LocHap2Bed.h  LocKMers.cpp  LocKMers.h  LocateROI.cpp  LocateROI.h  Makefile.am  MapLoci2Feat.cpp  MapLoci2Feat.h  MarkerKMers.cpp  (+84 more)
(+168 files in other folders)
