SUBDIRS = libkit4b \
    libBKPLPlot \
    libzlib \
    bed2csv \
    BEDFilter \
    BEDMerge \
    ngskit4b \
    kit4bRADSeq \
    blast2csv \
    csv2bed \
    csv2fasta \
    csv2feat \
    csv2stats \
    csvfilter \
    csvmerge \
    DNAseqSitePotential \
    fasta2dist \
    fasta2struct \
    fastafilter \
    FastaToPE \
    filterreads \
    genalignconf \
    genalignloci2core \
    genalignref2relloci \
    genalignstats \
    genbiomultialign \
    gencentroidmetrics \
    gencomposition \
    genElementProfiles \
    genelementseq \
    genGenomeFromAGP \
    genhyperdropouts \
    genloci2gene \
    genNormWiggle \
    gennucstats \
    genrollups \
    gensampler \
    genseqcandidates \
    genstructprofile \
    genstructstats \
    genultras \
    genWiggle \
    genzygosity \
    GFFfilter \
    GTFfilter \
    HammingDist \
    kit4bhrdx \
    LocateROI \
    loci2dist \
    Loci2Phylip \
    locmarkers \
    pacbiokit4b \
    predconfnucs \
    prednucleosomes \
    proccentroids \
    processcsvfiles \
    psl2csv \
    quickcount \
    RNAseqSitePotential \
    SimulateMNase \
    splitmultifasta \
    ufilter \
    usimdiffexpr
AUTOMAKE_OPTIONS = foreign
