noinst_LIBRARIES = libzlib.a
libzlib_a_SOURCES =  adler32.c  compress.c  crc32.c  deflate.c  gzclose.c  gzlib.c  gzread.c  gzwrite.c \
			infback.c  inffast.c  inflate.c  inftrees.c  trees.c  uncompr.c  zutil.c

# set the include path found by configure
AM_CPPFLAGS= -I../hdrs -I@top_srcdir@/ -I$(all_includes)

